Added disabling online links when offline.

--- a/spb/index.html
+++ b/spb/index.html
@@ -38,8 +38,8 @@
             <li><a class="menu-item-msk" href="/msk/">Москва</a></li>
             <li><a class="switch-en" href="#">English</a></li>
             <li><a class="switch-ru" href="#">Русский</a></li>
-            <li><a class="menu-item-download" href="/downloads/spb-ru.pdf" download>Скачать PDF</a></li>
-            <li><a class="menu-item-metro2" href="https://metro2.org/spb">Метро на карте</a></li>
+            <li><a class="menu-item-download online" href="/downloads/spb-ru.pdf" download>Скачать PDF</a></li>
+            <li><a class="menu-item-metro2 online" href="https://metro2.org/spb">Метро на карте</a></li>
           </ul>
         </div>
       </div>
@@ -50,7 +50,7 @@
       </div>
       <div id="footer">
         <div class="footer-item footer-credits">
-          <a class="d-logo" href="https://4d-design.pro/ru"><span class="hidden">4D design</span></a>
+          <a class="d-logo online" href="https://4d-design.pro/ru"><span class="hidden">4D design</span></a>
         </div>
       </div>
     </div>
