Added Minsk map. Updated map handling to support maore maps.

--- a/msk/index.html
+++ b/msk/index.html
@@ -20,7 +20,7 @@
     <meta name="msapplication-TileImage" content="/img/favicons/logo-144x144.png">
     <meta name="msapplication-TileColor" content="#999999">
   </head>
-  <body class="map-msk lang-ru">
+  <body class="map-msk lang-ru native-lang-ru">
     <div id="page">
       <div id="navbar">
         <div class="navbar-item navbar-title">
@@ -36,8 +36,9 @@
           <ul class="menu menu-dropdown" id="options-menu">
             <li class="current"><a class="menu-item-msk" href="/msk/">Москва</a></li>
             <li><a class="menu-item-spb" href="/spb/">Санкт-Петербург</a></li>
+            <li><a class="menu-item-mnk" href="/mnk/">Мінск</a></li>
             <li><a class="switch-en" href="#">English</a></li>
-            <li><a class="switch-ru" href="#">Русский</a></li>
+            <li><a class="switch-na" href="#">Русский</a></li>
             <li><a class="menu-item-download online" href="/downloads/msk-ru.pdf" download >Скачать PDF</a></li>
             <li><a class="menu-item-metro2 online" href="https://metro2.org/msk">Метро на карте</a></li>
           </ul>
