--- a/cph/index.html
+++ b/cph/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="/favicon.ico" type="image/vnd.microsoft.icon" />
-    <title>Схема метро Санкт-Петербурга</title>
+    <title>Kort over Københavns Metro og S-tog</title>
     <link rel="stylesheet" type="text/css" href="/css/imageviewer.css">
     <link rel="stylesheet" type="text/css" href="/css/styles.css">
     <script type="text/javascript" src="/js/jquery-1.11.3.min.js"></script>
@@ -20,13 +20,13 @@
     <meta name="msapplication-TileImage" content="/img/favicons/logo-144x144.png">
     <meta name="msapplication-TileColor" content="#999999">
   </head>
-  <body class="map-spb lang-ru native-lang-ru">
+  <body class="map-cph lang-da native-lang-da">
     <div id="page">
       <div id="navbar">
         <div class="navbar-item navbar-title">
           <div class="title-group">
             <div class="logo"></div>
-            <div class="map-title">Петербургский метрополитен</div>
+            <div class="map-title">Københavns Metro og S-tog</div>
           </div>
         </div>
         <div class="navbar-item">
@@ -34,25 +34,24 @@
             <a class="menu-icon" href="#"></a>
           </div>
           <ul class="menu menu-dropdown" id="options-menu">
-            <li class="current"><a class="menu-item-spb" href="/spb/">Санкт-Петербург</a></li>
+            <li class="current"><a class="menu-item-cph" href="/cph/">København</a></li>
             <li><a class="menu-item-msk" href="/msk/">Москва</a></li>
-            <li><a class="menu-item-cph" href="/cph/">København</a></li>
+            <li><a class="menu-item-spb" href="/spb/">Санкт-Петербург</a></li>
             <li><a class="menu-item-mnk" href="/mnk/">Мінск</a></li>
             <li><a class="switch-en" href="#">English</a></li>
-            <li><a class="switch-na" href="#">Русский</a></li>
-            <li><a class="menu-item-download online" href="/downloads/spb-ru.pdf" download>Скачать PDF</a></li>
-            <li><a class="menu-item-metro2 online" href="https://metro2.org/spb">Метро на карте</a></li>
+            <li><a class="switch-na" href="#">Dansk</a></li>
+            <li><a class="menu-item-download online" href="/downloads/cph-da.pdf" download >Download PDF</a></li>
           </ul>
         </div>
       </div>
       <div id="content">
         <div id="map-box">
-          <img src="/img/spb-ru.svg" alt="" class="pannable-image">
+          <img src="/img/cph-da.svg" alt="" class="pannable-image">
         </div>
       </div>
       <div id="footer">
         <div class="footer-item footer-credits">
-          <a class="d-logo online" href="https://4d-design.pro/ru"><span class="hidden">4D design</span></a>
+          <a class="d-logo online" href="https://4d-design.pro/"><span class="hidden">4D design</span></a>
         </div>
       </div>
     </div>
