--- a/msk/index.html
+++ b/msk/index.html
@@ -36,6 +36,7 @@
           <ul class="menu menu-dropdown" id="options-menu">
             <li class="current"><a class="menu-item-msk" href="/msk/">Москва</a></li>
             <li><a class="menu-item-spb" href="/spb/">Санкт-Петербург</a></li>
+            <li><a class="menu-item-cph" href="/cph/">København</a></li>
             <li><a class="menu-item-mnk" href="/mnk/">Мінск</a></li>
             <li><a class="switch-en" href="#">English</a></li>
             <li><a class="switch-na" href="#">Русский</a></li>
