Small improvement. Updated node modules.

--- a/cph/index.html
+++ b/cph/index.html
@@ -38,7 +38,7 @@
             <li><a class="menu-item-msk" href="/msk/">Москва</a></li>
             <li><a class="menu-item-spb" href="/spb/">Санкт-Петербург</a></li>
             <li><a class="menu-item-mnk" href="/mnk/">Мінск</a></li>
-            <li><a class="switch-en" href="#">English</a></li>
+            <li class="divider-top"><a class="switch-en" href="#">English</a></li>
             <li><a class="switch-na" href="#">Dansk</a></li>
             <li><a class="menu-item-download online" href="/downloads/cph-da.pdf" download >Download PDF</a></li>
           </ul>
