--- a/spb/index.html
+++ b/spb/index.html
@@ -38,7 +38,7 @@
             <li><a class="menu-item-msk" href="/msk/">Москва</a></li>
             <li><a class="menu-item-cph" href="/cph/">København</a></li>
             <li><a class="menu-item-mnk" href="/mnk/">Мінск</a></li>
-            <li><a class="switch-en" href="#">English</a></li>
+            <li class="divider-top"><a class="switch-en" href="#">English</a></li>
             <li><a class="switch-na" href="#">Русский</a></li>
             <li><a class="menu-item-download online" href="/downloads/spb-ru.pdf" download>Скачать PDF</a></li>
             <li><a class="menu-item-metro2 online" href="https://metro2.org/spb">Метро на карте</a></li>
