--- a/mnk/index.html
+++ b/mnk/index.html
@@ -38,7 +38,7 @@
             <li><a class="menu-item-msk" href="/msk/">Москва</a></li>
             <li><a class="menu-item-spb" href="/spb/">Санкт-Петербург</a></li>
             <li><a class="menu-item-cph" href="/cph/">København</a></li>
-            <li><a class="switch-en" href="#">English</a></li>
+            <li class="divider-top"><a class="switch-en" href="#">English</a></li>
             <li><a class="switch-na" href="#">Беларуская</a></li>
             <li><a class="menu-item-download online" href="/downloads/mnk-by.pdf" download >Спампаваць PDF</a></li>
           </ul>
