--- a/msk/index.html
+++ b/msk/index.html
@@ -38,7 +38,7 @@
             <li><a class="menu-item-spb" href="/spb/">Санкт-Петербург</a></li>
             <li><a class="menu-item-cph" href="/cph/">København</a></li>
             <li><a class="menu-item-mnk" href="/mnk/">Мінск</a></li>
-            <li><a class="switch-en" href="#">English</a></li>
+            <li class="divider-top"><a class="switch-en" href="#">English</a></li>
             <li><a class="switch-na" href="#">Русский</a></li>
             <li><a class="menu-item-download online" href="/downloads/msk-ru.pdf" download >Скачать PDF</a></li>
             <li><a class="menu-item-metro2 online" href="https://metro2.org/msk">Метро на карте</a></li>
